[update] 登录页面UI完成，自定义组件Logo和Image

--- a/i18n/locales/en/admin_login.json
+++ b/i18n/locales/en/admin_login.json
@@ -1,4 +1,11 @@
 {
   "title": "SIGN IN",
-  "desc": "Please input account & password to login"
+  "desc": "Please input account & password to login",
+  "account": "Account",
+  "password": "Password",
+  "remember": "Remember Account&Password",
+  "login": "LOGIN",
+  "placeholder_input": "Please input ",
+  "placeholder_invalid": "Pattern Invalid"
+
 }
