--- a/i18n/locales/zh/admin_login.json
+++ b/i18n/locales/zh/admin_login.json
@@ -1,4 +1,10 @@
 {
   "title": "登录",
-  "desc": "请输入账号和密码，进行登录"
+  "desc": "请输入账号和密码，进行登录",
+  "account": "账号",
+  "password": "密码",
+  "remember": "记住账号&密码",
+  "login": "登 录",
+  "placeholder_input": "请输入",
+  "placeholder_invalid": "格式错误"
 }
