[update] 菜单栏逻辑重写；部分Image的UI优化

--- a/i18n/locales/en/translation.json
+++ b/i18n/locales/en/translation.json
@@ -71,6 +71,7 @@
   "treeview": "Treeview",
   "typography": "Typography",
   "basic": "Basic",
+  "datatables_basic": "Basic Datatables",
   "order_sorting": "Order Sorting",
   "multi_column": "Multi Column",
   "multiple_tables": "Multiple Tables",
