--- a/i18n/locales/zh/translation.json
+++ b/i18n/locales/zh/translation.json
@@ -71,6 +71,7 @@
   "treeview": "树视图",
   "typography": "排版",
   "basic": "基本的",
+  "datatables_basic": "基础表格",
   "order_sorting": "订单排序",
   "multi_column": "多列",
   "multiple_tables": "多个表",
