[update] 统一滚动条滑轨背景，滑块颜色；菜单中英文对照部分修改

--- a/i18n/locales/en/translation.json
+++ b/i18n/locales/en/translation.json
@@ -70,28 +70,32 @@
   "tooltips": "Tooltips",
   "treeview": "Treeview",
   "typography": "Typography",
-  "basic": "Basic",
   "datatables_basic": "Basic Datatables",
-  "order_sorting": "Order Sorting",
-  "multi_column": "Multi Column",
-  "multiple_tables": "Multiple Tables",
-  "alt_pagination": "Alt. Pagination",
-  "range_search": "Range Search",
-  "export": "Export",
-  "input_group": "Input Group",
-  "layouts": "Layouts",
-  "validation": "Validation",
-  "input_mask": "Input Mask",
-  "select2": "Select2",
-  "touchspin": "Touchspin",
-  "checkbox_and_radio": "Checkbox & Radio",
-  "switches": "Switches",
-  "wizards": "Wizards",
-  "file_upload": "File Upload",
-  "quill_editor": "Quill Editor",
-  "markdown_editor": "Markdown Editor",
-  "date_and_range_picker": "Date & Range Picker",
-  "clipboard": "Clipboard",
+  "datatables_advanced": "Advanced Datatables",
+  "datatables_skin": "Skin Datatables",
+  "datatables_order_sorting": "Order Sorting",
+  "datatables_multi_column": "Multi Column",
+  "datatables_multiple_tables": "Multiple Datatables",
+  "datatables_alt_pagination": "Pagination Datatables",
+  "datatables_range_search": "Range Search Datatables",
+  "datatables_export": "Export Datatables",
+  "datatables_checkbox": "Checkbox Datatables",
+  "datatables_column_chooser": "Column Chooser",
+  "forms_basic": "Basic Forms",
+  "forms_input_group": "Input Group",
+  "forms_layouts": "Layouts",
+  "forms_validation": "Validation",
+  "forms_input_mask": "Input Mask",
+  "forms_select2": "Select2",
+  "forms_touchspin": "Touchspin",
+  "forms_checkbox_and_radio": "Checkbox & Radio",
+  "forms_switches": "Switches",
+  "forms_wizards": "Wizards",
+  "forms_file_upload": "File Upload",
+  "forms_quill_editor": "Quill Editor",
+  "forms_markdown_editor": "Markdown Editor",
+  "forms_date_and_range_picker": "Date & Range Picker",
+  "forms_clipboard": "Clipboard",
   "user_and_pages": "User And Pages",
   "profile": "Profile",
   "account_settings": "Account Settings",
