--- a/i18n/locales/zh/translation.json
+++ b/i18n/locales/zh/translation.json
@@ -7,13 +7,13 @@
   "sales": "销售量",
   "analytics": "分析",
   "apps": "应用",
-  "components": "成分",
+  "components": "组件",
   "elements": "元素",
   "font_icons": "字体图标",
   "widgets": "小工具",
   "tables": "表",
   "datatables": "数据表",
-  "forms": "形式",
+  "forms": "表单",
   "users": "用户",
   "pages": "页面",
   "authentication": "验证",
@@ -70,28 +70,32 @@
   "tooltips": "工具提示",
   "treeview": "树视图",
   "typography": "排版",
-  "basic": "基本的",
   "datatables_basic": "基础表格",
-  "order_sorting": "订单排序",
-  "multi_column": "多列",
-  "multiple_tables": "多个表",
-  "alt_pagination": "替代。分页",
-  "range_search": "范围搜索",
-  "export": "出口",
-  "input_group": "输入组",
-  "layouts": "布局",
-  "validation": "验证",
-  "input_mask": "输入掩码",
-  "select2": "选择2",
-  "touchspin": "触摸旋转",
-  "checkbox_and_radio": "复选框和收音机",
-  "switches": "开关",
-  "wizards": "奇才",
-  "file_upload": "上传文件",
-  "quill_editor": "羽毛笔编辑器",
-  "markdown_editor": "降价编辑器",
-  "date_and_range_picker": "日期和范围选择器",
-  "clipboard": "剪贴板",
+  "datatables_advanced": "进阶表格",
+  "datatables_skin": "皮肤表格",
+  "datatables_order_sorting": "排序表格",
+  "datatables_multi_column": "多列表格",
+  "datatables_multiple_tables": "多张表格",
+  "datatables_alt_pagination": "分页",
+  "datatables_range_search": "区间查询",
+  "datatables_export": "导出",
+  "datatables_checkbox": "复选框表格",
+  "datatables_column_chooser": "列选择器",
+  "forms_basic": "基础表单",
+  "forms_input_group": "输入组",
+  "forms_layouts": "布局",
+  "forms_validation": "验证",
+  "forms_input_mask": "输入掩码",
+  "forms_select2": "选择2",
+  "forms_touchspin": "触摸旋转",
+  "forms_checkbox_and_radio": "复选和单选",
+  "forms_switches": "开关",
+  "forms_wizards": "导引",
+  "forms_file_upload": "上传文件",
+  "forms_quill_editor": "富文本",
+  "forms_markdown_editor": "MD编辑器",
+  "forms_date_and_range_picker": "日期和范围选择器",
+  "forms_clipboard": "剪贴板",
   "user_and_pages": "用户和页面",
   "profile": "轮廓",
   "account_settings": "帐号设定",
