[fix]修复部分菜单中文翻译错误

--- a/i18n/locales/en/translation.json
+++ b/i18n/locales/en/translation.json
@@ -45,7 +45,7 @@
   "carousel": "Carousel",
   "countdown": "Countdown",
   "counter": "Counter",
-  "sweet_alerts": "Sweet Alerts",
+  "sweetalert": "Sweet Alerts",
   "timeline": "Timeline",
   "notifications": "Notifications",
   "media_object": "Media Object",
