--- a/i18n/locales/zh/translation.json
+++ b/i18n/locales/zh/translation.json
@@ -28,7 +28,7 @@
   "crypto": "加密货币",
   "chat": "聊天",
   "mailbox": "邮箱",
-  "todo_list": "待办事项列表",
+  "todolist": "待办事项列表",
   "notes": "笔记",
   "scrumboard": "剪贴板",
   "contacts": "联系人",
@@ -41,30 +41,30 @@
   "tabs": "标签",
   "accordions": "手风琴",
   "modals": "模态",
-  "cards": "牌",
-  "carousel": "旋转木马",
-  "countdown": "倒数",
-  "counter": "柜台",
-  "sweet_alerts": "甜蜜的警报",
+  "cards": "卡片",
+  "carousel": "轮播图",
+  "countdown": "倒计",
+  "counter": "计数",
+  "sweetalert": "弹框",
   "timeline": "时间线",
   "notifications": "通知",
   "media_object": "媒体对象",
   "list_group": "列表组",
   "pricing_tables": "定价表",
-  "lightbox": "灯箱",
+  "lightbox": "展示盒",
   "alerts": "警报",
-  "avatar": "阿凡达",
+  "avatar": "头像",
   "badges": "徽章",
   "breadcrumbs": "面包屑",
-  "buttons": "纽扣",
+  "buttons": "按钮",
   "button_groups": "按钮组",
   "color_library": "颜色库",
-  "dropdown": "落下",
+  "dropdown": "下拉框",
   "infobox": "信息框",
   "jumbotron": "超大屏幕",
-  "loader": "装载机",
+  "loader": "加载器",
   "pagination": "分页",
-  "popovers": "约夏克布丁",
+  "popovers": "气泡弹框",
   "progress_bar": "进度条",
   "search": "搜索",
   "tooltips": "工具提示",
@@ -87,7 +87,7 @@
   "forms_validation": "验证",
   "forms_input_mask": "输入掩码",
   "forms_select2": "选择2",
-  "forms_touchspin": "触摸旋转",
+  "forms_touchspin": "触针",
   "forms_checkbox_and_radio": "复选和单选",
   "forms_switches": "开关",
   "forms_wizards": "导引",
@@ -105,14 +105,14 @@
   "coming_soon": "快来了",
   "error": "错误",
   "maintenence": "维护",
-  "login_boxed": "登录盒装",
-  "register_boxed": "注册盒装",
-  "unlock_boxed": "解锁盒装",
-  "recover_id_boxed": "恢复盒装 ID",
-  "login_cover": "登录封面",
-  "register_cover": "注册封面",
-  "unlock_cover": "解锁封面",
-  "recover_id_cover": "恢复身份证封面",
+  "login_boxed": "盒装登录",
+  "register_boxed": "盒型注册",
+  "unlock_boxed": "盒型解锁",
+  "recover_id_boxed": "盒型重置密码",
+  "login_cover": "封面型登录",
+  "register_cover": "封面型注册",
+  "unlock_cover": "封面型解锁",
+  "recover_id_cover": "封面型重置密码",
   "supports": "支持",
   "login": "登录",
   "lockscreen": "锁屏",
@@ -130,8 +130,8 @@
   "skin": "皮肤",
   "sticky_header": "粘性标题",
   "clone_header": "克隆标题",
-  "coming_soon_boxed": "即将推出盒装",
-  "coming_soon_cover": "即将推出封面",
-  "contact_us_boxed": "联系我们 盒装",
-  "contact_us_cover": "联系我们封面"
+  "coming_soon_boxed": "盒型即将推出",
+  "coming_soon_cover": "封面型即将推出",
+  "contact_us_boxed": "盒型联系我们",
+  "contact_us_cover": "封面型联系我们"
 }
