[update] 抽取fetch网络请求封装为hooks

--- a/i18n/locales/en/translation.json
+++ b/i18n/locales/en/translation.json
@@ -133,5 +133,7 @@
   "coming_soon_boxed": "Coming Soon Boxed",
   "coming_soon_cover": "Coming Soon Cover",
   "contact_us_boxed": "Contact Us Boxed",
-  "contact_us_cover": "Contact Us Cover"
+  "contact_us_cover": "Contact Us Cover",
+  "fetch_success": "Operate Success",
+  "fetch_error": "Error"
 }
