--- a/i18n/locales/en/translation.json
+++ b/i18n/locales/en/translation.json
@@ -136,6 +136,7 @@
   "contact_us_cover": "Contact Us Cover",
   "fetch_success": "Operate Success",
   "fetch_error": "Error",
+  "toast_success_login": "Login Success",
   "admin-home": "Home",
   "system": "Sys Manage",
   "system-menu": "Sys Menu",
