--- a/i18n/locales/zh/translation.json
+++ b/i18n/locales/zh/translation.json
@@ -138,6 +138,7 @@
   "fetch_error": "出错了",
   "toast_success_login": "登录成功",
   "admin-home": "首页",
+  "admin-home-welcome": "欢迎使用Anthill Admin后管",
   "system": "系统管理",
   "system-menu": "系统菜单",
   "system-dict": "系统字典",
