--- a/i18n/locales/zh/admin_system_menu.json
+++ b/i18n/locales/zh/admin_system_menu.json
@@ -1,6 +1,10 @@
 {
   "add": "新增",
   "update": "修改",
-  "remove": "删除",
-  "export": "导出"
+  "delete": "删除",
+  "export": "导出",
+  "menu_name": "菜单名称",
+  "menu_key": "菜单KEY",
+  "menu_path": "菜单路径",
+  "actions": "操作"
 }
