--- a/i18n/locales/en/translation.json
+++ b/i18n/locales/en/translation.json
@@ -134,8 +134,10 @@
   "coming_soon_cover": "Coming Soon Cover",
   "contact_us_boxed": "Contact Us Boxed",
   "contact_us_cover": "Contact Us Cover",
-  "fetch_success": "Operate Success",
-  "fetch_error": "Error",
+  "fetch_success": "Fetch Success",
+  "fetch_error": "Fetch Error",
+  "operate_success": "Operate Success",
+  "operate_error": "Operate Error",
   "toast_success_login": "Login Success",
   "admin-home": "Home",
   "admin-home-welcome": "Welcome to use Anthill Admin backend",
