--- a/i18n/locales/zh/translation.json
+++ b/i18n/locales/zh/translation.json
@@ -134,8 +134,10 @@
   "coming_soon_cover": "封面型即将推出",
   "contact_us_boxed": "盒型联系我们",
   "contact_us_cover": "封面型联系我们",
-  "fetch_success": "操作成功",
+  "fetch_success": "获取成功",
   "fetch_error": "出错了",
+  "operate_success": "操作成功",
+  "operate_error": "操作失败",
   "toast_success_login": "登录成功",
   "admin-home": "首页",
   "admin-home-welcome": "欢迎使用Anthill Admin后管",
