--- a/i18n/locales/zh/admin_system_menu.json
+++ b/i18n/locales/zh/admin_system_menu.json
@@ -3,8 +3,12 @@
   "update": "修改",
   "delete": "删除",
   "export": "导出",
-  "name": "菜单名称",
-  "key": "菜单KEY",
-  "path": "菜单路径",
-  "actions": "操作"
+  "actions": "操作",
+  "name": "名称",
+  "type": "类型",
+  "status": "状态",
+  "affiliate": "归属",
+  "version": "支持版本",
+  "key": "键",
+  "path": "菜单路径"
 }
