--- a/i18n/locales/en/admin_system_dict.json
+++ b/i18n/locales/en/admin_system_dict.json
@@ -4,9 +4,15 @@
   "delete": "Delete",
   "export": "Export",
   "actions": "Actions",
+  "id": "ID",
+  "remark": "Remark",
+  "records_per_page": "Records Per Page",
   "placeholder_input": "Please input ",
   "placeholder_select": "Please select ",
   "form_label_1": "Dict Name",
   "form_label_2": "Dict Type",
-  "form_label_3": "Status"
+  "form_label_3": "Status",
+  "col_label_1": "Dict Name",
+  "col_label_2": "Dict Type",
+  "col_label_3": "Status"
 }
