[update] 直接使用axiosFetcher进行增删改

--- a/i18n/locales/en/admin_login.json
+++ b/i18n/locales/en/admin_login.json
@@ -4,7 +4,5 @@
   "account": "Account",
   "password": "Password",
   "remember": "Remember Account&Password",
-  "login": "LOGIN",
-  "placeholder_input": "Please input ",
-  "placeholder_invalid": "Pattern Invalid"
+  "login": "LOGIN"
 }
