--- a/i18n/locales/en/admin_common.json
+++ b/i18n/locales/en/admin_common.json
@@ -1,5 +1,28 @@
 {
   "query_title": "Query Conditions",
   "submit": "Submit",
-  "reset": "Reset"
+  "reset": "Reset",
+  "cancel": "Cancel",
+  "detail": "Detail",
+  "outline": "Outline",
+  "add": "Add",
+  "update": "Update",
+  "delete": "Delete",
+  "export": "Export",
+  "actions": "Actions",
+  "id": "ID",
+  "remark": "Remark",
+  "refresh": "Refresh Cache",
+  "records_per_page": "Records Per Page",
+  "placeholder_input": "Please input ",
+  "placeholder_select": "Please select ",
+  "description_json_input": "Format as key value pairs for the corresponding language,eg:'{\"en\":\"MenuName\"}',The language supported are: zh(Chinese), en(English)",
+  "validation_error": {
+    "field_required": "Field Required",
+    "field_invalid": "Field Invalid",
+    "field_length_invalid": "Field Length Invalid",
+    "field_json_invalid": "Json Format Invalid",
+    "same_old_new_password": "New password is same to origin password",
+    "differ_new_comfirm_password": "Password twice not match"
+  }
 }
