[update] 完成sys dict页面

--- a/i18n/locales/zh/admin_common.json
+++ b/i18n/locales/zh/admin_common.json
@@ -2,6 +2,7 @@
   "query_title": "查询条件",
   "submit": "提交",
   "reset": "重置",
+  "confirm": "确认",
   "cancel": "取消",
   "detail": "详情",
   "outline": "概要",
@@ -10,6 +11,8 @@
   "delete": "删除",
   "export": "导出",
   "actions": "操作",
+  "warn": "警告",
+  "desc_delete_id": "确定要删除这些数据吗？数据主键为：",
   "id": "主键",
   "remark": "备注",
   "refresh": "刷新缓存",
