--- a/i18n/locales/en/admin_common.json
+++ b/i18n/locales/en/admin_common.json
@@ -2,6 +2,7 @@
   "query_title": "Query Conditions",
   "submit": "Submit",
   "reset": "Reset",
+  "confirm": "Confirm",
   "cancel": "Cancel",
   "detail": "Detail",
   "outline": "Outline",
@@ -10,6 +11,8 @@
   "delete": "Delete",
   "export": "Export",
   "actions": "Actions",
+  "warn": "Warning",
+  "desc_delete_id": "Are you sure to delete these records? these records ids: ",
   "id": "ID",
   "remark": "Remark",
   "refresh": "Refresh Cache",
