--- a/i18n/locales/en/admin_system_menu.json
+++ b/i18n/locales/en/admin_system_menu.json
@@ -5,5 +5,11 @@
   "affiliate": "Affiliate",
   "version": "Support Version",
   "key": "Key",
-  "path": "Menu Path"
+  "path": "Menu Path",
+  "parent_menu": "Parent Menu",
+  "icon": "Icon",
+  "sort": "Sort",
+  "frame_flag": "Frame Flag",
+  "hidden_flag": "Hidden Flag",
+  "perms": "Permissions"
 }
