[update] 系统用户分三类，Role表区分模板和角色；系统用户目录下增加用户模板页面和客户列表页面

--- a/i18n/locales/en/admin_system_dict.json
+++ b/i18n/locales/en/admin_system_dict.json
@@ -1,5 +1,5 @@
 {
-  "col_label_1": "Dict Name",
-  "col_label_2": "Dict Type",
-  "col_label_3": "Status"
+  "name": "Dict Name",
+  "type": "Dict Type",
+  "status": "Status"
 }
