--- a/i18n/locales/en/admin_system_dict_data.json
+++ b/i18n/locales/en/admin_system_dict_data.json
@@ -1,7 +1,7 @@
 {
-  "col_label_1": "Dict Label",
-  "col_label_2": "Dict Type",
-  "col_label_3": "Status",
-  "col_label_4": "Dict Value",
-  "col_label_5": "Dict Sort"
+  "label": "Dict Label",
+  "type": "Dict Type",
+  "status": "Status",
+  "value": "Dict Value",
+  "sort": "Dict Sort"
 }
