--- a/i18n/locales/zh/admin_system_config.json
+++ b/i18n/locales/zh/admin_system_config.json
@@ -1,6 +1,6 @@
 {
-  "col_label_1": "配置名称",
-  "col_label_2": "配置键",
-  "col_label_3": "状态",
-  "col_label_4": "配置值"
+  "name": "配置名称",
+  "key": "配置键",
+  "status": "状态",
+  "value": "配置值"
 }
