--- a/i18n/locales/en/admin_sysuser_list.json
+++ b/i18n/locales/en/admin_sysuser_list.json
@@ -1,1 +1,9 @@
-{}
+{
+  "nick_name": "Nick Name",
+  "email": "Email",
+  "mobile": "Mobile",
+  "gender": "Gender",
+  "avatar": "Avatar",
+  "status": "Status",
+  "com_id": "ComId"
+}
