[update] 客户列表和用户列表页面

--- a/i18n/locales/en/admin_sysuser_company.json
+++ b/i18n/locales/en/admin_sysuser_company.json
@@ -1,6 +1,11 @@
 {
-  "company_name": "Company Name",
+  "username": "Username",
+  "nickname": "Nickname",
+  "email": "Email",
+  "mobile": "Mobile",
+  "gender": "Gender",
+  "avatar": "Avatar",
   "status": "Status",
-  "template_key": "Admin Template",
-  "active_time": "Expire Time"
+  "com_id": "ComId",
+  "admin_flag": "Admin"
 }
