[update] 角色和模板页面菜单权限修改组件

--- a/i18n/locales/en/admin_sysuser_company.json
+++ b/i18n/locales/en/admin_sysuser_company.json
@@ -1,11 +1,13 @@
 {
+  "company_name": "Company Name",
+  "status": "Status",
+  "template_key": "Admin Template",
+  "active_time": "Expire Time",
   "username": "Username",
   "nickname": "Nickname",
   "email": "Email",
   "mobile": "Mobile",
   "gender": "Gender",
   "avatar": "Avatar",
-  "status": "Status",
-  "com_id": "ComId",
-  "admin_flag": "Admin"
+  "com_id": "ComId"
 }
