--- a/i18n/locales/en/admin_sysuser_role.json
+++ b/i18n/locales/en/admin_sysuser_role.json
@@ -2,5 +2,6 @@
   "role_name": "Role Name",
   "role_key": "Role Key",
   "status": "Status",
-  "affiliate": "Affiliate"
+  "affiliate": "Affiliate",
+  "menu_permissions": "Menus & Permissions"
 }
