--- a/i18n/locales/zh/admin_sysuser_role.json
+++ b/i18n/locales/zh/admin_sysuser_role.json
@@ -2,5 +2,6 @@
   "role_name": "角色名称",
   "role_key": "角色键",
   "status": "状态",
-  "affiliate": "归属"
+  "affiliate": "归属",
+  "menu_permissions": "菜单&权限"
 }
