[update] nexjs api 透传后端headers

--- a/i18n/locales/en/admin_sysmonitor_login.json
+++ b/i18n/locales/en/admin_sysmonitor_login.json
@@ -4,5 +4,6 @@
   "login_location": "Login Location",
   "browser": "Browser",
   "os": "OS",
+  "login_time": "Login Time",
   "success": "Success"
 }
