--- a/i18n/locales/en/admin_common.json
+++ b/i18n/locales/en/admin_common.json
@@ -9,11 +9,13 @@
   "add": "Add",
   "update": "Update",
   "delete": "Delete",
+  "clear": "Clear",
   "users": "Users",
   "export": "Export",
   "actions": "Actions",
   "warn": "Warning",
   "desc_delete_id": "Are you sure to delete these records? these records ids: ",
+  "desc_clear": "Are you sure to clear all records?",
   "id": "ID",
   "remark": "Remark",
   "refresh": "Refresh Cache",
