--- a/i18n/locales/en/admin_common.json
+++ b/i18n/locales/en/admin_common.json
@@ -10,12 +10,14 @@
   "update": "Update",
   "delete": "Delete",
   "clear": "Clear",
+  "force_out": "Force Out",
   "users": "Users",
   "export": "Export",
   "actions": "Actions",
   "warn": "Warning",
   "desc_delete_id": "Are you sure to delete these records? these records ids: ",
   "desc_clear": "Are you sure to clear all records?",
+  "desc_force_out": "Are you sure to force out the user?",
   "id": "ID",
   "remark": "Remark",
   "refresh": "Refresh Cache",
