--- a/i18n/locales/zh/admin_common.json
+++ b/i18n/locales/zh/admin_common.json
@@ -10,12 +10,14 @@
   "update": "修改",
   "delete": "删除",
   "clear": "清空",
+  "force_out": "强退",
   "users": "人员",
   "export": "导出",
   "actions": "操作",
   "warn": "警告",
   "desc_delete_id": "确定要删除这些数据吗？数据主键为：",
   "desc_clear": "确定要清空所有记录吗?",
+  "desc_force_out": "确定强制退出该用户吗?",
   "id": "主键",
   "remark": "备注",
   "refresh": "刷新缓存",
